--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1",
+    "rand-token": "^1.0.1",
     "response-time": "^2.3.2"
   }
 }
